k8s/base/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config

data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

    static_resources:

      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000

          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager

                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                    stat_prefix: ingress_http

                    route_config:
                      name: local_route

                      virtual_hosts:

                        - name: grafana
                          domains:
                            - "grafana.captalien.io"
                            - "grafana.captalien.io:*"

                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: grafana_service

                        - name: backend
                          domains: ["*"]

                          routes:

                            - match:
                                prefix: "/go/metrics"
                              route:
                                cluster: go_service
                                prefix_rewrite: "/metrics"

                            - match:
                                prefix: "/swift/metrics"
                              route:
                                cluster: swift_service
                                prefix_rewrite: "/metrics"

                            - match:
                                prefix: "/go/"
                              route:
                                cluster: go_service
                                prefix_rewrite: "/"

                            - match:
                                prefix: "/swift/"
                              route:
                                cluster: swift_service
                                prefix_rewrite: "/"

                            - match:
                                prefix: "/"
                              route:
                                cluster: go_service

                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:

        - name: go_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN

          load_assignment:
            cluster_name: go_service

            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: go-server
                          port_value: 8080

        - name: swift_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN

          load_assignment:
            cluster_name: swift_service

            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: swift-server
                          port_value: 8081

        - name: grafana_service
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN

          load_assignment:
            cluster_name: grafana_service

            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: grafana
                          port_value: 3000
