k8s/base/go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: go-server
          image: go-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-server
spec:
  selector:
    app: go-server
  ports:
    - port: 8080
      targetPort: 8080
