k8s/base/swift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swift-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swift-server
  template:
    metadata:
      labels:
        app: swift-server
    spec:
      containers:
        - name: swift-server
          image: swift-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: swift-server
spec:
  selector:
    app: swift-server
  ports:
    - port: 8081
      targetPort: 8081
